# playground

./: lerna.json  package.json  simple  simple.c
chrome-extension/axcel-xt/: nodemon.json  package.json  tsconfig.json
chrome-extension/axcel-xt/public/: index.html  manifest.json
chrome-extension/axcel-xt/src/: background.ts  content.ts  inject.tsx
chrome-extension/axcel-xt/tools/: build.js  build.ts  key.pem
desktop/axcel-desktop/: .gitignore  deletetsshit.mjs  manifest.json  nodemon.json  package.json  tsconfig.json
desktop/axcel-desktop/src/: download.worker.ts  main.ts
desktop/axcel-desktop/tools/: build.ts  copy-snapshot.ts  create-snapshot.ts  package.ts  tes.ts
desktop/launcher/: .gitignore  README.md  package.json  tsconfig.json
desktop/launcher-rs/: package.json
desktop/launcher-rs/src/: App.tsx  (+2 more)
desktop/launcher-rs/src-tauri/: Cargo.toml  clientsecret.json  tauri.conf.json
desktop/launcher-rs/src-tauri/icons/: icon.icns
desktop/launcher-rs/src-tauri/src/: main.rs
web/app-store/: package.json  tsconfig.json
web/axcel-web/: apps.json  nodemon.json  package.json  tsconfig.json
web/launcher-ui/: gulpfile.js  package.json  tsconfig.json  vite.config.ts
web/lime/: .gitignore  gulpfile.js  index.html  inline.js  nodemon.json  package.json  tsconfig.json  vite.config.ts
web/manhwa-reader/: .eslintrc.js  gulpfile.js  package.json  vite.config.ts
web/react-web-sdk/: package.json  tsconfig.json
web/svp/: gulpfile.js  package.json  vite.config.js
web/tab-manager/: build.js  package.json  tab-manager.html  tsconfig.json  vite.config.ts
(+228 files in other folders)
